--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <title>P4A web - HS Layers</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
-    <div style="height:30em; width: 100%">
-        <div id="hs-app" hs ng-app="hs" ng-controller="Main" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"> </div>
-    </div>
+  <div style="height:30em; width: 100%">
+    <div id="hs-app" hs ng-app="hs" ng-controller="Main" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"> </div>
+  </div>
 
 <script>
+    window.HSL_PATH = 'https://unpkg.com/hslayers-ng@1.23.0/dist/';
+    function getLRUser() {
+      return (0);
+    }
     function styleFunction(feature, resolution) {
       if (
         feature &&
@@ -49,9 +52,6 @@
           }),
         });
       }
-    }
-    function getLRUser() {
-      return (0);
     }
     function hslayersNgConfig(ol) {
       return {
@@ -109,7 +109,7 @@
       }
     }
 </script>
-<script src='./lib/hslayers-ng.js'></script> <!-- https://unpkg.com/hslayers-ng@1.17.5/dist/hslayers-ng.js -->
+<script src='https://unpkg.com/hslayers-ng@1.23.0/dist/hslayers-ng.main.js'></script> <!-- ./lib/hslayers-ng.main.js -->
 
 </body>
 </html>
