--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           })
         ],
         default_view: new ol.View({
-          center: ol.proj.transform([17.474129, 52.574000], 'EPSG:4326', 'EPSG:3857'),
-          zoom: 4,
+          center: ol.proj.fromLonLat([-5.5, 34.5]),
+          zoom: 2,
           units: 'm'
         }),
         queryPoint: 'hidden'
