New background map
fixes #1

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         default_layers: [
           new ol.layer.Tile({
             source: new ol.source.OSM({
-              url: 'https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png',
+              url: 'https://cartodb-basemaps-{a-d}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png',
               attributions: [
-                '<a href="https://foundation.wikimedia.org/wiki/Maps_Terms_of_Use" target="_blank">Wikimedia Maps</a>',
+                '<a href="https://carto.com/attributions" target="_blank">CARTO</a>',
                 '© <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors'
               ]
             }),
