Fix background map title

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 '© <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors'
               ]
             }),
-            title: 'Wikimedia Map',
+            title: 'OpenStreetMap bright',
             base: true,
             visible: true,
             removable: false
